# nicotine-plus

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pylintrc  .snapcraft.yaml  404.md  AUTHORS.md  CHANGELOG  CNAME  CONTRIBUTING.md  GSTREAMER_BUNDLING_PROPOSAL.md  KNOWN_BUGS  MAINTAINERS  MANIFEST  MANIFEST.in  NEWS  NEWS.md  PKG-INFO  PREVIEW_TOOL_DOCUMENTATION.md  README  README.import-winconfig  README.md  README.trayicon  TODO  TRANSLATIONS  TRANSLATORS  TRANSLATORS.md  __builtins__.pyi  _config.yml  build-osxapp.sh  build-winexe.bat  clean_python  encode_bitmaps.py  encode_icons.py  log.2  log.2a  log.3a  log.3b  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md.license  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  2-feature-request.md.license  3-other.md  config.yml
.github/website/: 404.md  _config.yml
.github/workflows/:  UbuntuLTS.yml  autopkgtest.yml  build.yml  packaging.yml  pythonapp.yml  reuse.yml  tests.yml  website.yml
.well-known/: org.flathub.VerifiedApps.txt
build-aux/appimage/: dependencies.py  setup.py  testrun.py
build-aux/flatpak/: org.flathub.VerifiedApps.txt.license  org.nicotine_plus.Nicotine.json  org.nicotine_plus.Nicotine.json.license
build-aux/macos/: codesign-entitlements.plist  dependencies.py  icon.icns  pixbuf-loaders.cache
build-aux/release/: generate_sha256_checksums.py
build-aux/snap/: snapcraft.yaml
build-aux/windows/: dependencies.py  icon.ico.license  nicotine.manifest  pixbuf-loaders.cache  readme-portable.txt  readme-portable.txt.license  setup.py  setup_windows_env.py  testrun.py
data/: nicotine.1  org.nicotine_plus.Nicotine.appdata.xml.in  org.nicotine_plus.Nicotine.desktop  org.nicotine_plus.Nicotine.desktop.in  org.nicotine_plus.Nicotine.metainfo.xml.in
data/appdata/: org.nicotine_plus.Nicotine.appdata.xml
data/icons/: README.md
data/screenshots/: SCREENSHOTS.md  screenshot7.png.license
data/scripts/: extract_release_notes.py  generate_sha256_checksums.py  update_ip_country_data.py  update_translation_template.py
debian/: README.Debian  changelog  changelog.license  cleanup  control  control.license  copyright  copyright.license  docs  files  install  links  manpages  menu  nicotine-rm-nonfree  nicotine.1  nicotine.xpm  pybuild.testfiles  rules  watch  watch.license
debian/source/: format.license  options  options.license
debian/tests/: control  test-installed-artifacts.sh
doc/: BUILD_win32.txt  CHANGELOG  CHANGELOG_DOCS  DEPENDENCIES.md  DEPRECATED_SYMBOLS.md  DEVELOPING.md  DISTRO_PATCHES.md  DOWNLOAD.md  DOWNLOADS.md  FAQ.md  GITDEB.md  INSTALL  INSTALL.md  INSTALL_win32.txt  KNOWN_BUGS  KNOWN_BUGS.md  MAINTAINERS  MAINTAINERS.md  NicotinePlusGuide.html  PACKAGING.md  PIPINSTALL.md  README  README.trayicon  RUNFROMGIT.md  SLSKPROTOCOL.md  TESTING.md  TODO  TODO.md  TRANSLATIONS  TRANSLATIONS.md  TRANSLATORS  TRANSLATORS.md  build_mac.txt  py2app
doc/NicotinePlusGuide/: CHANGELOG_DOCS  NicotineGuide.htm  index.htm
docker/: Dockerfile  Dockerfile.python2  Dockerfile.python3
docker/config/: config  config.buddyfileindex.db  config.buddyfiles.db  config.files.db  config.streams.db
files/: README  Start Nicotine.bat  nicotine-plus-96px.icns  nicotine.1  nicotine.desktop  org.nicotine_plus.Nicotine.desktop  org.nicotine_plus.Nicotine.metainfo.xml  org.nicotine_plus.Nicotine.metainfo.xml.in
files/appdata/: nicotine.appdata.xml  org.nicotine_plus.Nicotine.appdata.xml
files/archive/: birdies.xcf
files/flatpak/: README.md  org.nicotine_plus.Nicotine.json
files/icons/: CREDITS.md  encode_bitmaps.py
files/mac/: nicotine_blue_upscaled.icns
files/macos/: create-dmg.sh  dependencies-core.sh  dependencies-packaging.sh  dependencies.sh  nicotine.icns  nicotine.spec
files/screenshots/: SCREENSHOTS.md
files/windows/: README  dependencies-core.sh  dependencies-packaging.sh  dependencies.sh  nicotine+.nsi  nicotine+.spec  nicotine.nsi  nicotine.spec  settings.ini
img/: CREDITS.md  README  birdies.xcf
img/geoip/: license.txt
img/scripts/: encode_bitmaps.py  generate-tray-icons.sh
languages/: mergeall  msgfmtall.py  nicotine.pot  remove_fuzzy  remove_mo  tr_gen.py  update_pot.py
manpages/: nicotine-import-winconfig.1  nicotine.1
nicotine_audio_preview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plugins/: 10-antishout.py  10-spamfilter.py  30-allmusic-url2search.py  30-discogs-url2search.py  30-musicbrainz-url2search.py  60-itunes-np.py  60-np-itunes-mac_osx.py  90-multipaste.py  99-checkport.py  99-mergedview.py  README
po/: LINGUAS  POTFILES.in  af.po  ar.po  ca.po  cs.po  da.po  de.po  enm.po  eo.po  es.po  es_CL.po  es_ES.po  et.po  eu.po  fi.po  fr.po  hr.po  hu.po  id.po  it.po  ka.po  ko.po  lt.po  lv.po  ms.po  nb_NO.po  nicotine.pot  nicotine.pot.license  nl.po  pa_PK.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sq.po  (+9 more)
pynicotine/: ConfigParser.py  __builtins__.pyi  __init__.py  __main__.py  _testmp3.py  buddies.py  chatrooms.py  cli.py  config.py  core.py  downloads.py  events.py  geoip.py  i18n.py  interests.py  libi18n.py  logfacility.py  metadata_mutagen.py  mp3.py  mp3_mutagen.py  multiselect.py  natpmp.py  networkfilter.py  notifications.py  nowplaying.py  pluginsystem.py  portchecker.py  portmapper.py  privatechat.py  py.typed  pynicotine.py  scheduler.py  search.py  shares.py  slskmessages.py  slskproto.py  statistics.py  temporary.py  transfers.py  updatechecker.py  (+7 more)
scripts/: 10-antishout.py  10-spamfilter.py  30-discogs-url2search.py  30-musicbrainz-url2search.py  90-multipaste.py
test/: test
tests/: mock_socket.py  read_socket_log.py  test_login.py
tools/: README  _library.sh  build-deb.sh  build-osxapp  build-osxapp.sh  build-winexe.bat  build_mac.txt  debug.py  encode_bitmaps.py  img_convert_DFSG.sh  install-rpm.sh  macports.patch  make_exe.bat  make_exe.py  memorytracker.sh  nicotine+-win32.spec  pack-source.sh  pack.sh  rocket.py
trayicon/: Makefile.in  autogen.py  eggtrayicon.c  eggtrayicon.h  trayicon.defs  trayicon.override  trayiconmodule.c
(+786 files in other folders)
