[metadata]
name = nicotine-plus
version = attr: pynicotine.__version__
license = GPLv3+
description = Graphical client for the Soulseek peer-to-peer network
long_description =
    Nicotine+ is a graphical client for the Soulseek peer-to-peer
    network.

    Nicotine+ aims to be a lightweight, pleasant, free and open
    source (FOSS) alternative to the official Soulseek client, while
    also providing a comprehensive set of features.
author = Nicotine+ Team
author_email = nicotine-team@lists.launchpad.net
url = https://nicotine-plus.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Communications :: Chat
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: System :: Networking

[options]
scripts = nicotine
packages = find:
python_requires = >=3.6
install_requires = PyGObject>=3.22

[options.packages.find]
include = pynicotine*
exclude = pynicotine.plugins.examplars*, pynicotine.tests*

[options.package_data]
* = *.css, *.csv, *.md, *.mo, *.svg, *.ui, PLUGININFO

[options.extras_require]
packaging = cx_Freeze
tests = pycodestyle; pylint

[pycodestyle]
max-line-length = 120
exclude = build/, venv/

[pylint]
disable =
    bad-option-value,
    bad-plugin-value,
    broad-except,
    cyclic-import,
    duplicate-code,
    fixme,
    import-outside-toplevel,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-self-use,
    no-value-for-parameter,
    superfluous-parens
enable =
    consider-using-augmented-assign,
    use-implicit-booleaness-not-comparison-to-string,
    use-implicit-booleaness-not-comparison-to-zero
ignore = tinytag.py
ignore-paths = build, pynicotine/locale, venv
load-plugins =
    pylint.extensions.bad_builtin,
    pylint.extensions.check_elif,
    pylint.extensions.code_style,
    pylint.extensions.comparetozero,
    pylint.extensions.comparison_placement,
    pylint.extensions.consider_refactoring_into_while_condition,
    pylint.extensions.emptystring,
    pylint.extensions.for_any_all,
    pylint.extensions.dict_init_mutate,
    pylint.extensions.dunder,
    pylint.extensions.eq_without_hash,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.private_import,
    pylint.extensions.set_membership,
    pylint.extensions.typing
py-version = 3.6

[pylint.design]
max-args = 18
max-attributes = 125
max-bool-expr = 6
max-branches = 40
max-locals = 40
max-positional-arguments = 15
max-public-methods = 85
max-returns = 12
max-statements = 125
min-public-methods = 0

[pylint.format]
max-line-length = 120
max-module-lines = 4500

[pylint.refactoring]
max-nested-blocks = 6

[pylint.similarities]
min-similarity-lines = 15

[pylint.variables]
additional-builtins = _
